--- a/styles.css
+++ b/styles.css
@@ -48,9 +48,18 @@ input:focus, textarea:focus, select:focus{
         Globals end
 */
 
+
+/*
+        header
+*/
+
 .head-container{
     height:150px;
     width:100%;
+    display:flex;
+    flex-direction: row;
+}
+.logo{
     display:flex;
     flex-direction: row;
 }
@@ -84,6 +93,9 @@ body .search input{
 }
 .search button{
     cursor: pointer;
+    flex-wrap: nowrap;
+    position:absolute;
+    margin-left:-30px;
 }
 .search button, .search img{
     background-color: rgb(48, 158, 231);
@@ -107,17 +119,69 @@ body .search .fa-search{
 .title p{
     line-height: 0%;
     margin-top:-1rem;
+    overflow-wrap: normal;
 }
 
 
+/*
+        header end
+*/
+
+
+
+
+/*
+        weather
+*/
 
 #weather-box{
     margin-top:3rem;
+    display: flex;
+    flex-direction: column;
+
 }
 #icon{
     height:200px;
     width:200px;
 }
 #temperature{
-    font-size: 20rem;
+    font-size: 15rem;
 }
+.temp-icon{
+    display:flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+
+/*
+        weather end
+*/
+
+
+/*
+        media 
+*/
+
+@media only screen and (max-width:900px){
+    .content{
+        width:100%;
+        padding:0 1rem 0 1rem;
+    }
+
+    .head-container{
+        flex-direction: column;
+    }
+
+    .head{
+        flex-direction: column;
+        width:100%;
+    }
+    body{
+        width:100%;
+    }
+}
+
+/*
+        media end
+*/
