--- a/styles.css
+++ b/styles.css
@@ -141,8 +141,8 @@ body .search .fa-search{
 
 }
 #icon{
-    height:200px;
-    width:200px;
+    height:100px;
+    width:100px;
 }
 #temperature{
     font-size: 15rem;
@@ -179,6 +179,14 @@ body .search .fa-search{
     }
     body{
         width:100%;
+    }
+
+    #temperature{
+        font-size: 9rem;
+    }
+    .search{
+        margin-left:0;
+        margin-top:1rem;
     }
 }
 
